--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -1,275 +1,211 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 
-		<!-- Basic -->
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
+    {% include "templates/header.html" %}
 
-		<title>Contact Us | IT Cleanup</title>
 
-		<meta name="keywords" content="ItCleanup" />
-		<meta name="description" content="ItCleanup - Wholesale used IT equipment dealers">
-		<meta name="author" content="vinod.gupta">
+</head>
+<body>
 
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+<div class="body">
+    {% include "templates/menu.html" %}
 
-		<!-- Mobile Metas -->
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <div role="main" class="main">
 
-		<!-- Web Fonts  -->
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">
+        <section class="page-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="breadcrumb">
+                            <li><a href="#">Home</a></li>
+                            <li class="active">Contact Us</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Contact Us</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-		<!-- Vendor CSS -->
-		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="vendor/animate/animate.min.css">
-		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
-		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+        <!-- Google Maps - Go to the bottom of the page to change settings and map location. -->
+        <div id="googlemaps" class="google-map"></div>
 
-		<!-- Theme CSS -->
-		<link rel="stylesheet" href="css/theme.css">
-		<link rel="stylesheet" href="css/theme-elements.css">
-		<link rel="stylesheet" href="css/theme-blog.css">
-		<link rel="stylesheet" href="css/theme-shop.css">
+        <div class="container">
 
-		<!-- Skin CSS -->
-		<link rel="stylesheet" href="css/skins/default.css">
+            <div class="row">
+                <div class="col-md-6">
 
-		<!-- Theme Custom CSS -->
-		<link rel="stylesheet" href="css/custom.css">
+                    <div class="alert alert-success hidden mt-lg" id="contactSuccess">
+                        <strong>Success!</strong> Your message has been sent to us.
+                    </div>
 
-		<!-- Head Libs -->
-		<script src="vendor/modernizr/modernizr.min.js"></script>
+                    <div class="alert alert-danger hidden mt-lg" id="contactError">
+                        <strong>Error!</strong> There was an error sending your message.
+                        <span class="font-size-xs mt-sm display-block" id="mailErrorMessage"></span>
+                    </div>
 
-	</head>
-	<body>
+                    <h2 class="mb-sm mt-sm"><strong>Contact</strong> Us</h2>
+                    <form id="contactForm" action="php/contact-form.php" method="POST">
+                        <div class="row">
+                            <div class="form-group">
+                                <div class="col-md-6">
+                                    <label>Your name *</label>
+                                    <input type="text" value="" data-msg-required="Please enter your name."
+                                           maxlength="100" class="form-control" name="name" id="name" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Your email address *</label>
+                                    <input type="email" value="" data-msg-required="Please enter your email address."
+                                           data-msg-email="Please enter a valid email address." maxlength="100"
+                                           class="form-control" name="email" id="email" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <label>Subject</label>
+                                    <input type="text" value="" data-msg-required="Please enter the subject."
+                                           maxlength="100" class="form-control" name="subject" id="subject" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <label>Message *</label>
+                                    <textarea maxlength="5000" data-msg-required="Please enter your message." rows="10"
+                                              class="form-control" name="message" id="message" required></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <input type="submit" value="Send Message" class="btn btn-primary btn-lg mb-xlg"
+                                       data-loading-text="Loading...">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6">
 
-		<div class="body">
-		    {% include "templates/header.html" %}
+                    <h4 class="heading-primary mt-lg">Get in <strong>Touch</strong></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet
+                        varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit.</p>
 
-			<div role="main" class="main">
+                    <hr>
 
-				<section class="page-header">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-12">
-								<ul class="breadcrumb">
-									<li><a href="#">Home</a></li>
-									<li class="active">Contact Us</li>
-								</ul>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<h1>Contact Us</h1>
-							</div>
-						</div>
-					</div>
-				</section>
+                    <h4 class="heading-primary">The <strong>Office</strong></h4>
+                    <ul class="list list-icons list-icons-style-3 mt-xlg">
+                        <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name,
+                            United States
+                        </li>
+                        <li><i class="fa fa-phone"></i> <strong>Phone:</strong> (123) 456-789</li>
+                        <li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a>
+                        </li>
+                    </ul>
 
-				<!-- Google Maps - Go to the bottom of the page to change settings and map location. -->
-				<div id="googlemaps" class="google-map"></div>
+                    <hr>
 
-				<div class="container">
+                    <h4 class="heading-primary">Business <strong>Hours</strong></h4>
+                    <ul class="list list-icons list-dark mt-xlg">
+                        <li><i class="fa fa-clock-o"></i> Monday - Friday - 9am to 5pm</li>
+                        <li><i class="fa fa-clock-o"></i> Saturday - 9am to 2pm</li>
+                        <li><i class="fa fa-clock-o"></i> Sunday - Closed</li>
+                    </ul>
 
-					<div class="row">
-						<div class="col-md-6">
+                </div>
 
-							<div class="alert alert-success hidden mt-lg" id="contactSuccess">
-								<strong>Success!</strong> Your message has been sent to us.
-							</div>
+            </div>
 
-							<div class="alert alert-danger hidden mt-lg" id="contactError">
-								<strong>Error!</strong> There was an error sending your message.
-								<span class="font-size-xs mt-sm display-block" id="mailErrorMessage"></span>
-							</div>
+        </div>
 
-							<h2 class="mb-sm mt-sm"><strong>Contact</strong> Us</h2>
-							<form id="contactForm" action="php/contact-form.php" method="POST">
-								<div class="row">
-									<div class="form-group">
-										<div class="col-md-6">
-											<label>Your name *</label>
-											<input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" id="name" required>
-										</div>
-										<div class="col-md-6">
-											<label>Your email address *</label>
-											<input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" name="email" id="email" required>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="form-group">
-										<div class="col-md-12">
-											<label>Subject</label>
-											<input type="text" value="" data-msg-required="Please enter the subject." maxlength="100" class="form-control" name="subject" id="subject" required>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="form-group">
-										<div class="col-md-12">
-											<label>Message *</label>
-											<textarea maxlength="5000" data-msg-required="Please enter your message." rows="10" class="form-control" name="message" id="message" required></textarea>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-12">
-										<input type="submit" value="Send Message" class="btn btn-primary btn-lg mb-xlg" data-loading-text="Loading...">
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="col-md-6">
+    </div>
 
-							<h4 class="heading-primary mt-lg">Get in <strong>Touch</strong></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <section class="call-to-action call-to-action-default with-button-arrow call-to-action-in-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="call-to-action-content">
+                        <h3>Porto is <strong>everything</strong> you need to create an <strong>awesome</strong> website!
+                        </h3>
+                        <p>The <strong>#1 Selling</strong> HTML Site Template on ThemeForest</p>
+                    </div>
+                    <div class="call-to-action-btn">
+                        <a href="http://themeforest.net/item/porto-responsive-html5-template/4106987" target="_blank"
+                           class="btn btn-lg btn-primary">Buy Now!</a><span
+                            class="arrow hlb hidden-xs hidden-sm hidden-md" data-appear-animation="rotateInUpLeft"
+                            style="top: -12px;"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-							<hr>
+    {% include "templates/footer.html" %}
+</div>
+{% include "templates/footer_incs.html" %}
 
-							<h4 class="heading-primary">The <strong>Office</strong></h4>
-							<ul class="list list-icons list-icons-style-3 mt-xlg">
-								<li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</li>
-								<li><i class="fa fa-phone"></i> <strong>Phone:</strong> (123) 456-789</li>
-								<li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a></li>
-							</ul>
 
-							<hr>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<script>
 
-							<h4 class="heading-primary">Business <strong>Hours</strong></h4>
-							<ul class="list list-icons list-dark mt-xlg">
-								<li><i class="fa fa-clock-o"></i> Monday - Friday - 9am to 5pm</li>
-								<li><i class="fa fa-clock-o"></i> Saturday - 9am to 2pm</li>
-								<li><i class="fa fa-clock-o"></i> Sunday - Closed</li>
-							</ul>
+    /*
+     Map Settings
 
-						</div>
+     Find the Latitude and Longitude of your address:
+     - http://universimmedia.pagesperso-orange.fr/geo/loc.htm
+     - http://www.findlatitudeandlongitude.com/find-address-from-latitude-and-longitude/
 
-					</div>
+     */
 
-				</div>
+    // Map Markers
+    var mapMarkers = [{
+        address: "New York, NY 10017",
+        html: "<strong>New York Office</strong><br>New York, NY 10017",
+        icon: {
+            image: "img/pin.png",
+            iconsize: [26, 46],
+            iconanchor: [12, 46]
+        },
+        popup: true
+    }];
 
-			</div>
+    // Map Initial Location
+    var initLatitude = 40.75198;
+    var initLongitude = -73.96978;
 
-			<section class="call-to-action call-to-action-default with-button-arrow call-to-action-in-footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="call-to-action-content">
-								<h3>Porto is <strong>everything</strong> you need to create an <strong>awesome</strong> website!</h3>
-								<p>The <strong>#1 Selling</strong> HTML Site Template on ThemeForest</p>
-							</div>
-							<div class="call-to-action-btn">
-								<a href="http://themeforest.net/item/porto-responsive-html5-template/4106987" target="_blank" class="btn btn-lg btn-primary">Buy Now!</a><span class="arrow hlb hidden-xs hidden-sm hidden-md" data-appear-animation="rotateInUpLeft" style="top: -12px;"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
+    // Map Extended Settings
+    var mapSettings = {
+        controls: {
+            panControl: true,
+            zoomControl: true,
+            mapTypeControl: true,
+            scaleControl: true,
+            streetViewControl: true,
+            overviewMapControl: true
+        },
+        scrollwheel: false,
+        markers: mapMarkers,
+        latitude: initLatitude,
+        longitude: initLongitude,
+        zoom: 16
+    };
 
-    		{% include "templates/footer.html" %}
-		</div>
+    var map = $('#googlemaps').gMap(mapSettings);
 
-		<!-- Vendor -->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/jquery.appear/jquery.appear.min.js"></script>
-		<script src="vendor/jquery.easing/jquery.easing.min.js"></script>
-		<script src="vendor/jquery-cookie/jquery-cookie.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-		<script src="vendor/common/common.min.js"></script>
-		<script src="vendor/jquery.validation/jquery.validation.min.js"></script>
-		<script src="vendor/jquery.easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
-		<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>
-		<script src="vendor/jquery.lazyload/jquery.lazyload.min.js"></script>
-		<script src="vendor/isotope/jquery.isotope.min.js"></script>
-		<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
-		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<script src="vendor/vide/vide.min.js"></script>
-		
-		<!-- Theme Base, Components and Settings -->
-		<script src="js/theme.js"></script>
+    // Map Center At
+    var mapCenterAt = function (options, e) {
+        e.preventDefault();
+        $('#googlemaps').gMap("centerAt", options);
+    }
 
-		<!-- Current Page Vendor and Views -->
-		<script src="js/views/view.contact.js"></script>
-		
-		<!-- Theme Custom -->
-		<script src="js/custom.js"></script>
-		
-		<!-- Theme Initialization Files -->
-		<script src="js/theme.init.js"></script>
+</script>
 
-		<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
-		<script>
-
-			/*
-			Map Settings
-
-				Find the Latitude and Longitude of your address:
-					- http://universimmedia.pagesperso-orange.fr/geo/loc.htm
-					- http://www.findlatitudeandlongitude.com/find-address-from-latitude-and-longitude/
-
-			*/
-
-			// Map Markers
-			var mapMarkers = [{
-				address: "New York, NY 10017",
-				html: "<strong>New York Office</strong><br>New York, NY 10017",
-				icon: {
-					image: "img/pin.png",
-					iconsize: [26, 46],
-					iconanchor: [12, 46]
-				},
-				popup: true
-			}];
-
-			// Map Initial Location
-			var initLatitude = 40.75198;
-			var initLongitude = -73.96978;
-
-			// Map Extended Settings
-			var mapSettings = {
-				controls: {
-					panControl: true,
-					zoomControl: true,
-					mapTypeControl: true,
-					scaleControl: true,
-					streetViewControl: true,
-					overviewMapControl: true
-				},
-				scrollwheel: false,
-				markers: mapMarkers,
-				latitude: initLatitude,
-				longitude: initLongitude,
-				zoom: 16
-			};
-
-			var map = $('#googlemaps').gMap(mapSettings);
-
-			// Map Center At
-			var mapCenterAt = function(options, e) {
-				e.preventDefault();
-				$('#googlemaps').gMap("centerAt", options);
-			}
-
-		</script>
-
-		<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-			ga('create', 'UA-12345678-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-		 -->
-
-	</body>
+</body>
 </html>
