--- a/views/index.html
+++ b/views/index.html
@@ -2,61 +2,13 @@
 <html>
 <head>
 
-    <!-- Basic -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>IT Cleanup</title>
-
-    <meta name="keywords" content="ItCleanup"/>
-    <meta name="description" content="ItCleanup - Wholesale used IT equipment dealers">
-    <meta name="author" content="vinod.gupta">
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-    <!-- Web Fonts  -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light"
-          rel="stylesheet" type="text/css">
-
-    <!-- Vendor CSS -->
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="vendor/animate/animate.min.css">
-    <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
-
-    <!-- Theme CSS -->
-    <link rel="stylesheet" href="css/theme.css">
-    <link rel="stylesheet" href="css/theme-elements.css">
-    <link rel="stylesheet" href="css/theme-blog.css">
-    <link rel="stylesheet" href="css/theme-shop.css">
-
-    <!-- Current Page CSS -->
-    <link rel="stylesheet" href="vendor/rs-plugin/css/settings.css">
-    <link rel="stylesheet" href="vendor/rs-plugin/css/layers.css">
-    <link rel="stylesheet" href="vendor/rs-plugin/css/navigation.css">
-
-    <!-- Skin CSS -->
-    <link rel="stylesheet" href="css/skins/default.css">
-
-    <!-- Theme Custom CSS -->
-    <link rel="stylesheet" href="css/custom.css">
-
-    <!-- Head Libs -->
-    <script src="vendor/modernizr/modernizr.min.js"></script>
+    {% include "templates/header.html" %}
 
 </head>
 <body>
 
 <div class="body">
-    {% include "templates/header.html" %}
+    {% include "templates/menu.html" %}
 
     <div role="main" class="main">
 
@@ -327,40 +279,11 @@
 
     </div>
 
-    		{% include "templates/footer.html" %}
+    {% include "templates/footer.html" %}
 </div>
 
-<!-- Vendor -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/jquery.appear/jquery.appear.min.js"></script>
-<script src="vendor/jquery.easing/jquery.easing.min.js"></script>
-<script src="vendor/jquery-cookie/jquery-cookie.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<script src="vendor/common/common.min.js"></script>
-<script src="vendor/jquery.validation/jquery.validation.min.js"></script>
-<script src="vendor/jquery.easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
-<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>
-<script src="vendor/jquery.lazyload/jquery.lazyload.min.js"></script>
-<script src="vendor/isotope/jquery.isotope.min.js"></script>
-<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
-<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-<script src="vendor/vide/vide.min.js"></script>
+{% include "templates/footer_incs.html" %}
 
-<!-- Theme Base, Components and Settings -->
-<script src="js/theme.js"></script>
-
-<!-- Current Page Vendor and Views -->
-<script src="vendor/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-<script src="vendor/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-
-<!-- Current Page Vendor and Views -->
-<script src="js/views/view.contact.js"></script>
-
-<!-- Theme Custom -->
-<script src="js/custom.js"></script>
-
-<!-- Theme Initialization Files -->
-<script src="js/theme.init.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM0VFhswsa5iSiztF7MARARq7_ATjB254"></script>
 <script>
@@ -473,17 +396,6 @@
 
 </script>
 
-<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-12345678-1', 'auto');
-    ga('send', 'pageview');
-</script>
- -->
 
 </body>
 </html>
