--- a/views/sitemap.html
+++ b/views/sitemap.html
@@ -1,160 +1,92 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 
-		<!-- Basic -->
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
+    {% include "templates/header.html" %}
+</head>
+<body>
 
-		<title>Sitemap | Porto - Responsive HTML5 Template 5.7.2</title>	
+<div class="body">
+    {% include "templates/menu.html" %}
 
-		<meta name="keywords" content="HTML5 Template" />
-		<meta name="description" content="Porto - Responsive HTML5 Template">
-		<meta name="author" content="okler.net">
+    <div role="main" class="main">
 
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+        <section class="page-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="breadcrumb">
+                            <li><a href="#">Home</a></li>
+                            <li class="active">Pages</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Sitemap</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-		<!-- Mobile Metas -->
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <div class="container">
 
-		<!-- Web Fonts  -->
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">
+            <div class="row">
 
-		<!-- Vendor CSS -->
-		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="vendor/animate/animate.min.css">
-		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
-		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+                <div class="col-md-4">
+                    <ul class="nav nav-list mb-xl">
+                        <li><a href="index.html">Home</a></li>
+                        <li>
+                            <a href="#">About Us</a>
+                            <ul>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">About Me</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="page-team.html">Team</a></li>
+                        <li><a href="page-services.html">Services</a></li>
+                        <li><a href="page-careers.html">Careers</a></li>
+                        <li><a href="page-our-office.html">Our Office</a></li>
+                        <li><a href="page-faq.html">FAQ</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
 
-		<!-- Theme CSS -->
-		<link rel="stylesheet" href="css/theme.css">
-		<link rel="stylesheet" href="css/theme-elements.css">
-		<link rel="stylesheet" href="css/theme-blog.css">
-		<link rel="stylesheet" href="css/theme-shop.css">
+                <div class="col-md-6 col-md-offset-2 hidden-xs">
+                    <h2 class="mb-lg">Who <strong>We Are</strong></h2>
+                    <p class="lead">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc
+                        vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</p>
+                    <ul class="list list-icons mt-xl">
+                        <li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis.
+                            Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                        </li>
+                        <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                        </li>
+                        <li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis.
+                        </li>
+                        <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                        </li>
+                        <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                        </li>
+                        <li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis.
+                        </li>
+                        <li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.
+                        </li>
+                    </ul>
+                </div>
 
-		<!-- Skin CSS -->
-		<link rel="stylesheet" href="css/skins/default.css">
+            </div>
 
-		<!-- Theme Custom CSS -->
-		<link rel="stylesheet" href="css/custom.css">
+        </div>
 
-		<!-- Head Libs -->
-		<script src="vendor/modernizr/modernizr.min.js"></script>
+    </div>
+    {% include "templates/footer.html" %}
 
-	</head>
-	<body>
+</div>
 
-		<div class="body">
-			    {% include "templates/header.html" %}
+{% include "templates/footer_incs.html" %}
 
-			<div role="main" class="main">
 
-				<section class="page-header">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-12">
-								<ul class="breadcrumb">
-									<li><a href="#">Home</a></li>
-									<li class="active">Pages</li>
-								</ul>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<h1>Sitemap</h1>
-							</div>
-						</div>
-					</div>
-				</section>
-
-				<div class="container">
-
-					<div class="row">
-
-						<div class="col-md-4">
-							<ul class="nav nav-list mb-xl">
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">About Us</a>
-									<ul>
-										<li><a href="#">About Us</a></li>
-										<li><a href="#">About Me</a></li>
-									</ul>
-								</li>
-								<li><a href="page-team.html">Team</a></li>
-								<li><a href="page-services.html">Services</a></li>
-								<li><a href="page-careers.html">Careers</a></li>
-								<li><a href="page-our-office.html">Our Office</a></li>
-								<li><a href="page-faq.html">FAQ</a></li>
-								<li><a href="#">Portfolio</a></li>
-								<li><a href="#">Contact Us</a></li>
-							</ul>
-						</div>
-
-						<div class="col-md-6 col-md-offset-2 hidden-xs">
-							<h2 class="mb-lg">Who <strong>We Are</strong></h2>
-							<p class="lead">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</p>
-							<ul class="list list-icons mt-xl">
-								<li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis. Phasellus in risus quis lectus iaculis vulputate id quis nisl.</li>
-								<li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.</li>
-								<li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis. </li>
-								<li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.</li>
-								<li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.</li>
-								<li><i class="fa fa-check"></i>Fusce sit amet orci quis arcu vestibulum vestibulum sed ut felis. </li>
-								<li><i class="fa fa-check"></i>Phasellus in risus quis lectus iaculis vulputate id quis nisl.</li>
-							</ul>
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-    		{% include "templates/footer.html" %}
-
-		</div>
-
-		<!-- Vendor -->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/jquery.appear/jquery.appear.min.js"></script>
-		<script src="vendor/jquery.easing/jquery.easing.min.js"></script>
-		<script src="vendor/jquery-cookie/jquery-cookie.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-		<script src="vendor/common/common.min.js"></script>
-		<script src="vendor/jquery.validation/jquery.validation.min.js"></script>
-		<script src="vendor/jquery.easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
-		<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>
-		<script src="vendor/jquery.lazyload/jquery.lazyload.min.js"></script>
-		<script src="vendor/isotope/jquery.isotope.min.js"></script>
-		<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
-		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<script src="vendor/vide/vide.min.js"></script>
-		
-		<!-- Theme Base, Components and Settings -->
-		<script src="js/theme.js"></script>
-		
-		<!-- Theme Custom -->
-		<script src="js/custom.js"></script>
-		
-		<!-- Theme Initialization Files -->
-		<script src="js/theme.init.js"></script>
-
-		<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-			ga('create', 'UA-12345678-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-		 -->
-
-	</body>
+</body>
 </html>
