--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -1,87 +1,49 @@
-<header id="header"
-            data-plugin-options="{'stickyEnabled': true, 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyStartAt': 57, 'stickySetTop': '-57px', 'stickyChangeLogo': true}">
-        <div class="header-body">
-            <div class="header-container container">
-                <div class="header-row">
-                    <div class="header-column">
-                        <div class="header-logo">
-                            <a href="/">
-                                <img alt="ItCleanup" width="333" height="162" src="img/logo.png">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="header-column">
-                        <div class="header-row">
-                            <div class="header-search hidden-xs">
-                                <form id="searchForm" action="page-search-results.html" method="get">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" name="q" id="q" placeholder="Search..."
-                                               required>
-                                        <span class="input-group-btn">
-													<button class="btn btn-default" type="submit"><i
-                                                            class="fa fa-search"></i></button>
-												</span>
-                                    </div>
-                                </form>
-                            </div>
-                            <nav class="header-nav-top">
-                                <ul class="nav nav-pills">
-                                    <li class="hidden-xs">
-                                        <a href="/about-us"><i class="fa fa-angle-right"></i> About Us</a>
-                                    </li>
-                                    <li class="hidden-xs">
-                                        <a href="/contact-us"><i class="fa fa-angle-right"></i> Contact Us</a>
-                                    </li>
-                                    <li>
-                                        <span class="ws-nowrap"><i class="fa fa-phone"></i> (650) 787-3966</span>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <div class="header-row">
-                            <div class="header-nav">
-                                <button class="btn header-btn-collapse-nav" data-toggle="collapse"
-                                        data-target=".header-nav-main">
-                                    <i class="fa fa-bars"></i>
-                                </button>
-                                <ul class="header-social-icons social-icons hidden-xs">
-                                    <li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank"
-                                                                         title="Facebook"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank"
-                                                                        title="Twitter"><i
-                                            class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank"
-                                                                         title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                </ul>
-                                <div class="header-nav-main header-nav-main-effect-1 header-nav-main-sub-effect-1 collapse">
-                                    <nav>
-                                        <ul class="nav nav-pills" id="mainNav">
-                                            <li class="">
-                                                <a href="/">
-                                                    HOME
-                                                </a>
-                                            </li>
+<!-- Basic -->
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-                                            <li class="">
-                                                <a href="/about-us">
-                                                    About Us
-                                                </a>
-                                            </li>
-                                            <li class="">
-                                                <a href="/contact-us">
-                                                    Contact Us
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+<title>IT Cleanup</title>
+
+<meta name="keywords" content="ItCleanup"/>
+<meta name="description" content="ItCleanup - Wholesale used IT equipment dealers">
+<meta name="author" content="vinod.gupta">
+
+<!-- Favicon -->
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+
+<!-- Mobile Metas -->
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<!-- Web Fonts  -->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light"
+      rel="stylesheet" type="text/css">
+
+<!-- Vendor CSS -->
+<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="vendor/animate/animate.min.css">
+<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
+<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
+<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+
+<!-- Theme CSS -->
+<link rel="stylesheet" href="css/theme.css">
+<link rel="stylesheet" href="css/theme-elements.css">
+<link rel="stylesheet" href="css/theme-blog.css">
+<link rel="stylesheet" href="css/theme-shop.css">
+
+<!-- Current Page CSS -->
+<link rel="stylesheet" href="vendor/rs-plugin/css/settings.css">
+<link rel="stylesheet" href="vendor/rs-plugin/css/layers.css">
+<link rel="stylesheet" href="vendor/rs-plugin/css/navigation.css">
+
+<!-- Skin CSS -->
+<link rel="stylesheet" href="css/skins/default.css">
+
+<!-- Theme Custom CSS -->
+<link rel="stylesheet" href="css/custom.css">
+
+<!-- Head Libs -->
+<script src="vendor/modernizr/modernizr.min.js"></script>
